--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-persist": "^4.3.1",
     "bootstrap": "^5.1.3",
+    "clsx": "^1.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
